# video-downloader

./: .env.example  .gitignore  Dockerfile  content.config.ts  docker-compose.yml  ecosystem.config.cjs  nuxt.config.ts  package.json  update-ytdlp.sh
.github/workflows/: deploy.yml
app/: app.vue  error.vue  router.options.ts
app/pages/: [slug].vue  index.vue
app/plugins/: seo.ts
backend/: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __main__.py  gunicorn_runner.py  log.py  pre_start.py  settings.py
backend/app/db/: base.py  utils.py
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py
backend/app/services/redis/: dependency.py  lifespan.py  rate_limit.py
backend/app/tasks/: __init__.py  broker.py  cleanup_tasks.py  download_tasks.py
backend/app/utils/: common.py  http.py
backend/app/web/: __init__.py  application.py  lifespan.py
backend/app/web/api/: router.py
backend/app/web/api/download/: __init__.py  schema.py  views.py
backend/app/web/api/monitoring/: __init__.py
backend/db-init-scripts/: initialize.sh
backend/tests/: conftest.py  test_redis.py
config/: languages.ts  platforms.ts
content/pages/: facebook-downloader-mp3.yml  facebook-downloader.yml  facebook.yml  instagram-downloader.yml  instagram-reels.yml  instagram.yml  reddit.yml  tiktok-downloader.yml  tiktok.yml  twitch.yml  vimeo-downloader.yml  (+9 more)
scripts/: add-meta-keywords.ts  auto-translate.ts  fix-locale-placeholders.ts  generate-admin-config.ts  generate-locales.ts
(+63 files in other folders)
